# fast_fourier_transforms

./: Algorithm_notes.md  Project_notes.md  testavx.c
C/: CMakeLists.txt  fft_iterative.c  fft_iterative.h
C/src/: avxtools.c  avxtools.h  fft_iterative.c  fft_iterative.h  fft_threaded.c  tools.c  tools.h
C/test/: CMakeLists.txt  test_creation_destruction_rootsofunity.c  test_fft_iterative.c  test_fft_threaded.c  test_tools.c  time_fft_iterative.c  time_fft_threaded.c
Fft/: Algorithm_notes.md  gromacs_setup.sh  testavx  testavx.c
Fft/C/: CMakeLists.txt
Fft/C/src/: fft_distributed.c  fft_distributed.h  fft_iterative.c  fft_iterative.h  fft_threaded.c  fft_threaded.h  mpi_tools.c  mpi_tools.h  tools.c  tools.h
Fft/C/test/: CMakeLists.txt  test_allocation_destruction_complexarr.c  test_creation_destruction_rootsofunity.c  test_fft_threaded.c  time_fft_iterative.c  time_fft_threaded.c
Fft/Python/: fft_iterative.py
Python/: fft_iterative.py  fft_recursive.py
